@@ -7,6 +7,27 @@ player  = Epiar.player()
 shipList[0] = player
 AIPlans = {}
 
+shiptypes = { -- TODO This list should be generated by parsing the models-default.xml
+	"Terran FV-5 Frigate",
+	"Solaran Battle Cuiser",
+	"Terran Miner",
+	"Terran Corvert Mark I",
+	"Terran Corvert Mark II",
+	"Gate Enforcer",
+	"Hammer Freighter",
+	"Kartanal",
+	"Patitu",
+	"Fleet Guard",
+	"Escape Pod",
+	"Raven",
+	"Terran Explorer",
+	"Mid Vesper",
+	"Large Vesper",
+	"Terran Assist",
+	"Uber",
+	"Terran XV"
+}
+
 function CreateShips(number_of_ships, X, Y)
 	-- Generate Ships
 	for s =1,number_of_ships do
@@ -14,7 +35,7 @@ function CreateShips(number_of_ships, X, Y)
 		cur_ship = EpiarLua.Ship:new(
 				math.random(1000)-500+X, -- X
 				math.random(1000)-500+Y, -- Y
-				"Terran FV-5 Frigate", -- Ship Model
+				shiptypes[s],
 				"chase"                 -- Ship Script
 				)
 		table.insert(shipList, cur_ship )
@@ -203,7 +224,12 @@ function Update ()
 		AIPlans[s].time = AIPlans[s].time -1
 		-- When the current plan is complete, pick a new plan
 		if AIPlans[s].time == 0 then 
-			AIPlans[s] = newPlan()
+			x,y = EpiarLua.Ship.GetPosition(cur_ship)
+			if distfrom(x,y,0,0) >1000 then
+				AIPlans[s] = {plan=aimCenter,time=300}
+			else
+				AIPlans[s] = newPlan()
+			end
 		end
 	end
 
